--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -20,9 +20,9 @@
 <!-- tabbed navigation bar -->
 <nav class="tabs">
   <ul>
-    <li class="li-1-3"><a href="#home" data-role="link" class="activetab">Home</a></li>
-    <li class="li-1-3"><a href="#two" data-role="link">GEO</a></li>
-    <li class="li-1-3"><a href="#three" data-role="link">Contacts</a></li>
+    <li class="li-1-3" id="nav1"><a href="#home" data-role="link" class="activetab"></a></li>
+    <li class="li-1-3" id="nav2"><a href="#two" data-role="link"></a></li>
+    <li class="li-1-3" id="nav3"><a href="#three" data-role="link"></a></li>
   </ul>
 
 </nav>
@@ -32,8 +32,9 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis sodales rutrum. Phasellus non dui euismod, pulvinar est et, tincidunt enim. Donec dictum odio nec ipsum placerat dapibus. Proin vehicula lorem sapien, vehicula interdum nisl viverra at. Vivamus eget mauris vitae tellus auctor semper vel a lectus. Vivamus facilisis eros quam, at elementum massa facilisis non. Phasellus placerat gravida risus, in pulvinar nisl lobortis vitae.</p>
 </section>
 <section data-role="page" id="two">
-  <h2>Screen Two</h2>
-  <p>Nulla sit amet massa nec libero mattis hendrerit. Nunc pulvinar diam neque, quis ultricies nisi tristique et. Duis nec mattis odio, eget vestibulum massa. Integer ac sem a ante tincidunt pharetra. Nunc dui purus, consequat ut commodo vel, cursus semper justo. Curabitur sit amet mollis arcu, sit amet rutrum purus. In condimentum, enim ut lacinia consequat, felis nulla tempor justo, vulputate tincidunt urna magna in ipsum.</p>
+  <h2>Location</h2>
+  
+            
 </section>
 <section data-role="page" id="three">
   <h2>Screen Three</h2>
