Geolocation update, tabs switch, contacts

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -38,11 +38,12 @@
 </section>
 <section data-role="page" id="three">
   <h2>Contacts</h2>
-
+	<div id="selectedContact"></div>
+    
 </section>
             </div>
         </div>
-        <!--<script type="text/javascript" src="cordova.js"></script>-->
+        <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
