--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -37,12 +37,12 @@
             
 </section>
 <section data-role="page" id="three">
-  <h2>Screen Three</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis sodales rutrum. Phasellus non dui euismod, pulvinar est et, tincidunt enim. Donec dictum odio nec ipsum placerat dapibus. Proin vehicula lorem sapien, vehicula interdum nisl viverra at. Vivamus eget mauris vitae tellus auctor semper vel a lectus. Vivamus facilisis eros quam, at elementum massa facilisis non. Phasellus placerat gravida risus, in pulvinar nisl lobortis vitae.</p>
+  <h2>Contacts</h2>
+
 </section>
             </div>
         </div>
-        <!--<script type="text/javascript" src="cordova.js"></script>-->
+        <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
