--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -29,7 +29,7 @@
 
 <section data-role="page" id="home" class="active">
   <h2>Home Screen</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis sodales rutrum. Phasellus non dui euismod, pulvinar est et, tincidunt enim. Donec dictum odio nec ipsum placerat dapibus. Proin vehicula lorem sapien, vehicula interdum nisl viverra at. Vivamus eget mauris vitae tellus auctor semper vel a lectus. Vivamus facilisis eros quam, at elementum massa facilisis non. Phasellus placerat gravida risus, in pulvinar nisl lobortis vitae.</p>
+  <p>Check this bitching app out. Yeah that's right You with the face! Dis little app right here has much awesome features like Geolocation - Holyshit! thats right, need some location? don't worry We've got your back. But wait, there's more... Need a random contact? Easy, touch that contact tab and Bam, a random contact for you. Get wriggity wriggity wrecked, son!</p>
 </section>
 <section data-role="page" id="two">
   <h2>Location</h2>
